adjusted footer again. made .phone class not overextend so that theres no random white space on the right. everything should be fixed now!

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -27,7 +27,6 @@ p {
 
 //machine section------------------------------------------------
 
-
 .machine {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -80,24 +79,21 @@ p {
     .view {
       grid-row: 3/4;
       margin-top: 0;
-
     }
   }
 }
 
 .machine-text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 3rem;
 
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 3rem;
-
-    @include mq(37.5em) {
-        font-size: 1.3rem;
-        border-bottom: transparent;
-        padding-bottom: 1rem ;
-    }
-
+  @include mq(37.5em) {
+    font-size: 1.3rem;
+    border-bottom: transparent;
+    padding-bottom: 1rem;
+  }
 
   @include mq(37.5em) {
     font-size: 1.3rem;
@@ -107,42 +103,39 @@ p {
 }
 
 .machine-text h2 {
+  grid-column: 2/3;
+  margin: 0;
+  font-size: 30px;
+  line-height: 28px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #555;
 
-    grid-column: 2/3;
-    margin: 0;
-    font-size: 30px;
-    line-height: 28px;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #555;
+  @include mq(37.5em) {
+    color: $secondary-color;
+    font-size: 35px;
+    border-bottom: transparent;
+    padding-bottom: 1rem;
+  }
 
-    @include mq(37.5em) {
-        color: $secondary-color;
-        font-size: 35px;
-        border-bottom: transparent;
-        padding-bottom: 1rem ;
-    }
-    
-    @include mq(68.75em) {
-        font-size: 45px;
-    }
+  @include mq(68.75em) {
+    font-size: 45px;
+  }
 }
 
 .machine-text p {
-    display: block;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    overflow: auto;
-    font-size: 14px;
-    border-bottom: 1px solid black;
-    padding-bottom: 1rem;
+  display: block;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  overflow: auto;
+  font-size: 14px;
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
 
-
-    @include mq(68.75em) {
-        font-size: 17px;
-        padding: 0 5rem;
-    }
-
+  @include mq(68.75em) {
+    font-size: 17px;
+    padding: 0 5rem;
+  }
 }
 
 .machine h2 {
@@ -154,33 +147,26 @@ p {
 }
 
 .blue-wave {
-
-    height: 8rem;   
-    width: 100%;   
-    margin-bottom: 0;
-    padding-bottom: 0;
-    
-    
+  height: 8rem;
+  width: 100%;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .question-wrapper {
-    background-color: $secondary-color;
-    padding: 1rem 1rem;   
-    margin-top: 0;
-    @include mq(68.75em) {
-        
-    }
-
+  background-color: $secondary-color;
+  padding: 1rem 1rem;
+  margin-top: 0;
+  @include mq(68.75em) {
+  }
 }
 
 //question section------------------------------------------------
 
 .advisor {
-
-    position: relative;
-    display: block;
-    width: 100%;
-    
+  position: relative;
+  display: block;
+  width: 100%;
 }
 
 .advisor:before {
@@ -196,13 +182,10 @@ p {
   background-image: url("../images/wave-blue-dark.png");
 }
 
-
-
-.question h2  {
-    color: $text-color-light;
-    padding-top: 2rem;
-    margin-top: 0;
-
+.question h2 {
+  color: $text-color-light;
+  padding-top: 2rem;
+  margin-top: 0;
 
   @include mq(37.5em) {
     font-size: 1.4rem;
@@ -302,18 +285,15 @@ p {
 }
 
 .question-button {
-
-    display: grid;
-    grid-template-columns: 1fr;
-    text-align: center;
-    width: 100%;
-    padding: .8rem 2rem;
-    margin: 2rem 0;
-    background-color: $brand-color;   
-    text-decoration: none;
-
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+  width: 100%;
+  padding: 0.8rem 2rem;
+  margin: 2rem 0;
+  background-color: $brand-color;
+  text-decoration: none;
 }
-
 
 .question-button a {
   text-decoration: none;
@@ -324,13 +304,10 @@ p {
 //About us section------------------------------------------------
 
 .about-us-container {
-
-    background-image: url(../images/bg-section-about-us.jpg);
-    background-size: cover;
-    background-position: 50% 0;
-    position: relative;
-    
-
+  background-image: url(../images/bg-section-about-us.jpg);
+  background-size: cover;
+  background-position: 50% 0;
+  position: relative;
 }
 
 .about-us h3 {
@@ -365,15 +342,12 @@ p {
 }
 
 .about-us-button {
-
-    display: inline-block;
-    color: $text-color-light ;
-    border: 2px solid rgb(255, 255, 255);
-    background-color: transparent;
-    padding: 15px 35px;
-    margin: 2rem 0;
-  
-
+  display: inline-block;
+  color: $text-color-light;
+  border: 2px solid rgb(255, 255, 255);
+  background-color: transparent;
+  padding: 15px 35px;
+  margin: 2rem 0;
 }
 
 .about-us-button a {
@@ -660,11 +634,12 @@ footer {
 
 .phone {
   justify-content: center;
-  width: 70%;
+  width: 60%;
+  font-size: 0.8rem;
   position: absolute;
   vertical-align: middle;
   text-align: center;
-  margin-left: 0.5rem;
+  padding-left: 4rem;
 }
 
 .contact-us {
@@ -673,6 +648,7 @@ footer {
   display: inline-block;
   width: 100%;
   position: absolute;
+  font-size: 0.8rem;
   vertical-align: middle;
   margin-right: 1rem;
   max-width: 100%;
@@ -724,14 +700,14 @@ footer {
     text-align: left;
     padding-left: 6rem;
     position: absolute;
-    left: 50%;
+    left: 38%;
   }
 
   .linkedin {
     text-align: left;
     padding-left: 6rem;
     position: absolute;
-    left: 52%;
+    left: 40%;
   }
 
   .phone {
@@ -766,7 +742,9 @@ footer {
 
   .phone {
     position: absolute;
-    left: 60%;
+    left: 80%;
+    width: 30%;
+    display: block;
   }
 
   .contact-us {
