--- a/scss/styles.css
+++ b/scss/styles.css
@@ -25,7 +25,6 @@ body {
   font-family: Roboto Condensed;
 }
 
-
 .nadias-section {
   margin: 0 auto;
   font-size: 1rem;
@@ -118,6 +117,13 @@ p {
     padding-bottom: 1rem;
   }
 }
+@media (min-width: 37.5em) {
+  .machine-text {
+    font-size: 1.3rem;
+    border-bottom: transparent;
+    padding-bottom: 1rem;
+  }
+}
 
 .machine-text h2 {
   grid-column: 2/3;
@@ -148,6 +154,8 @@ p {
   grid-row: 2/3;
   overflow: auto;
   font-size: 14px;
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
 }
 @media (min-width: 68.75em) {
   .machine-text p {
@@ -177,8 +185,22 @@ p {
   margin-top: 0;
 }
 .advisor {
+  position: relative;
   display: block;
   width: 100%;
+}
+
+.advisor:before {
+  content: "";
+  position: absolute;
+  left: -60px;
+  top: -62px;
+  right: 0;
+  z-index: -1;
+  height: 166px;
+  background-size: 160% 80%;
+  background-repeat: no-repeat;
+  background-image: url("../images/wave-blue-dark.png");
 }
 
 .question h2 {
@@ -188,19 +210,6 @@ p {
 }
 @media (min-width: 37.5em) {
   .question h2 {
-    font-size: 2.4rem;
-    margin-bottom: 0;
-  }
-}
-
-.question p {
-  color: white;
-  border-bottom: 1px solid white;
-  padding-bottom: 2rem;
-  margin-bottom: 0.5rem;
-}
-@media (min-width: 37.5em) {
-  .question p {
     font-size: 1.4rem;
     color: #429bd6;
     margin-top: 0.5rem;
@@ -635,11 +644,12 @@ footer {
 
 .phone {
   justify-content: center;
-  width: 70%;
+  width: 60%;
+  font-size: 0.8rem;
   position: absolute;
   vertical-align: middle;
   text-align: center;
-  margin-left: 0.5rem;
+  padding-left: 4rem;
 }
 
 .contact-us {
@@ -648,6 +658,7 @@ footer {
   display: inline-block;
   width: 100%;
   position: absolute;
+  font-size: 0.8rem;
   vertical-align: middle;
   margin-right: 1rem;
   max-width: 100%;
@@ -698,13 +709,13 @@ footer {
     text-align: left;
     padding-left: 6rem;
     position: absolute;
-    left: 50%;
+    left: 38%;
   }
   .linkedin {
     text-align: left;
     padding-left: 6rem;
     position: absolute;
-    left: 52%;
+    left: 40%;
   }
   .phone {
     position: absolute;
@@ -733,7 +744,9 @@ footer {
   }
   .phone {
     position: absolute;
-    left: 60%;
+    left: 80%;
+    width: 30%;
+    display: block;
   }
   .contact-us {
     position: absolute;
@@ -840,12 +853,6 @@ footer {
     bottom: 27%;
   }
 }
-
-header {
-  background-color: rgba(58, 58, 58, 0.4941176471);
-}
-
-
 .my-header {
   position: absolute;
   z-index: 100;
@@ -1144,11 +1151,4 @@ header {
   #hamburger-menu {
     display: none;
   }
-
-}
-.nav-menu a:hover, .nav-menu a:focus, .nav-menu a:active {
-
-  background-color: #429bd6;
-
-
 }/*# sourceMappingURL=styles.css.map */
